// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`receipts.update > functionality > update currency code 1`] = `
{
  "updated": {
    "receipts": {
      "id:a016a14b-41ab-4970-a31f-826713234921": {
        "currencyCode": "PEN",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`receipts.update > functionality > update issued 1`] = `
{
  "updated": {
    "receipts": {
      "id:c97e6495-51a6-4983-820c-628d50435171": {
        "issued": "2020-06-01",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`receipts.update > functionality > update name 1`] = `
{
  "updated": {
    "receipts": {
      "id:b8fa34ec-cd6d-4b07-a848-dee3e266ed85": {
        "name": "apparatus repellendus vinculum",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;
